# msdf-atlas-gen

./: .gitmodules  CMakeLists.txt  premake5.lua
msdf-atlas-gen/: CMakeLists.txt
msdf-atlas-gen/msdfgen/: CMakeLists.txt
